# mashcard

./: .dockerignore  .editorconfig  .env.development  .env.local.template  .eslintignore  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  .licrc  .lintstagedrc.json  .lintstagedrc.yml  .prettierignore  .prettierrc  .prettierrc.yml  .rubocop.yml  .simplecov  .stylelintrc.json  .swcrc  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  LICENSE.zh-Hans.md  NOTICE  Procfile.dev  README.md  SECURITY.md  SECURITY.zh-Hans.md  babel.config.js  babel.config.json  codecov.yml  codegen.yml  commitlint.config.js  crowdin.yml  cypress.json  docker-compose.yml  esbuild-runner.config.js  (+16 more)
apps/server-monolith/: .env.local.template  .gitignore  .rubocop.yml  Cargo.toml  Gemfile  Rakefile  config.ru  package.json  tsconfig.json  vite.config.ts
apps/server-monolith/.bundle/: config
apps/server-monolith/app/channels/: internal_graphql_channel.rb
apps/server-monolith/app/controllers/: application_controller.rb  internal_apis_controller.rb  pages_controller.rb  storages_controller.rb
apps/server-monolith/config/: application.rb  boot.rb  brakeman.ignore  cable.yml  database.yml  domain_blacklist.yml  domain_denylist.yml  environment.rb  feature_flags.yml  inflections.yml  puma.rb  routes.rb  secrets.yml  storage.yml  vite.json
apps/server-monolith/db/: schema.rb  seeds.rb
apps/server-monolith/docs/: ext.md
apps/server-monolith/ext/: Rakefile  lib.rs
apps/server-monolith/lib/: brick_graphql.rb  brickdoc.rb  brickdoc_hook.rb  brickdoc_plugin.rb  mashcard.rb
apps/server-monolith/public/: pdftron.css  robots.txt
apps/server-monolith/spec/: graphql_spec_helper.rb  rails_helper.rb  spec_helper.rb
(+3169 files in other folders)
