[package]
name = "mashcard_ext"
version = "0.1.0"
edition = "2021"
description = "Rust native extension for MashCard Server"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "ext/lib.rs"

[dependencies]
magnus = "0.3"
any_ascii = "0.3"
bs58 = "0.4"
radix_fmt = "1"
blake3 = "1"
hex = "0.4"
rand ={ version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3.1"
argon2 = { version = "0.4", features = ["parallel"] }
z85 = "3"
base64-simd = "0.5"
woothee = "0.13"
jsonschema = "0.16.0"
mrml = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng"]


[profile.release]
lto = true
codegen-units = 1

[profile.dev]
incremental=true
